fix(web): altera BrowserLauncher para usar rundll32 diretamente no Windows evitando falhas silenciosas do Desktop API